--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
         const socket = io();
         let numbers = [];
         let isAdmin = false; // 管理者モードを制御するフラグ
-        const correctPassword = "admin"; // 正しいパスワード
 
         function getBingoColumnColor(number) {
             if (number >= 1 && number <= 15) return 'B';
@@ -243,7 +242,7 @@
 
         function checkPassword() {
             const password = document.getElementById('passwordInput').value;
-            if (password === correctPassword) {
+            if (password === "1234") {
                 isAdmin = true; // パスワードが正しければ管理者モードを有効に
                 document.getElementById('admin-controls').style.display = 'block'; // 管理者モードを表示
                 closePasswordPopup();
