--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             const number = parseInt(newNumberInput.value);
             console.log("Input number:", number); // 値をコンソールに表示
         
-            if (!isNaN(number) && number >= 1 && number <= 75)) {
+            if (!isNaN(number) && number >= 1 && number <= 75) {
                 numbers.push(number);
                 socket.emit('newNumber', number);
                 newNumberInput.value = '';
